--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.5.2",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
